<resources>
    <string name="app_name">Mobile Apps</string>
    <string name="login_label">Login</string>
    <string name="new_member_text">New Member? Register Here</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="sign_in_text">Sign in to access your account</string>
    <string name="welcome_text">Welcome back</string>
    <string name="remember_me">Remember me</string>
    <string name="next_button_text">Next</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="recipe_description">Recipe Description</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
</resources>
